--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,7 +4,24 @@
   box-sizing: border-box;
 }
 
-.container{
+.container-navbar{
   width: 100%;
   height: 70px;
+  .navbar{
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    .navbar-left{
+      width: 50%;
+      height: 100%;
+      background: yellow;
+      float: left;
+    }
+    .navbar-right{
+      width: 50%;
+      height: 100%;
+      background: blue;
+      float: left;
+    }
+  }
 }
