--- a/css/app.css
+++ b/css/app.css
@@ -4,25 +4,25 @@
   box-sizing: border-box;
 }
 
-.container-navbar {
+.navbar-container {
   width: 100%;
   height: 70px;
 }
 
-.container-navbar .navbar {
+.navbar-container .navbar {
   width: 70%;
   height: 100%;
   margin: 0 auto;
 }
 
-.container-navbar .navbar .navbar-left {
+.navbar-container .navbar .navbar-left {
   width: 50%;
   height: 100%;
   background: yellow;
   float: left;
 }
 
-.container-navbar .navbar .navbar-right {
+.navbar-container .navbar .navbar-right {
   width: 50%;
   height: 100%;
   background: blue;
