--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
 }
 
 .navbar-container{
@@ -11,17 +12,29 @@
     width: 70%;
     height: 100%;
     margin: 0 auto;
+    margin-bottom: 1px solid lightgrey;
     .navbar-left{
       width: 50%;
       height: 100%;
-      background: yellow;
       float: left;
     }
     .navbar-right{
       width: 50%;
       height: 100%;
-      background: blue;
       float: left;
+      line-height: 70px;
+      text-align: right;
+      ul{
+        list-style: none;
+        li{
+          display: inline-block;
+          margin: 0 10px;
+          a{
+            text-decoration: none;
+            color: black;
+          }
+        }
+      }
     }
   }
 }
