--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,9 +1,4 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
-}
+@import "common";
 
 .navbar-container{
   width: 100%;
@@ -17,6 +12,10 @@
       width: 50%;
       height: 100%;
       float: left;
+      img{
+        height: 60px;
+        margin-top: 5px;
+      }
     }
     .navbar-right{
       width: 50%;
