--- a/css/app.css
+++ b/css/app.css
@@ -45,6 +45,12 @@
   margin: 0 10px;
 }
 
+.navbar-container .navbar .navbar-right ul li .sign-up {
+  border: 1px solid red;
+  border-radius: 10px;
+  padding: 10px;
+}
+
 .navbar-container .navbar .navbar-right ul li a {
   text-decoration: none;
   color: black;
