--- a/sass/app.scss
+++ b/sass/app.scss
@@ -28,6 +28,11 @@
         li{
           display: inline-block;
           margin: 0 10px;
+          .sign-up{
+            border: 1px solid red;
+            border-radius: 10px;
+            padding: 10px;
+          }
           a{
             text-decoration: none;
             color: black;
