--- a/sass/app.scss
+++ b/sass/app.scss
@@ -7,7 +7,7 @@
     width: 70%;
     height: 100%;
     margin: 0 auto;
-    margin-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
     .navbar-left{
       width: 50%;
       height: 100%;
@@ -28,14 +28,22 @@
         li{
           display: inline-block;
           margin: 0 10px;
-          .sign-up{
-            border: 1px solid red;
-            border-radius: 10px;
-            padding: 10px;
-          }
+
           a{
             text-decoration: none;
             color: black;
+            &:hover{
+              color: blue;
+            }
+            &.sign-up{
+              border: 1px solid blue;
+              border-radius: 10px;
+              padding: 7px;
+              &:hover{
+                color: white;
+                background: blue;
+              }
+            }
           }
         }
       }
