--- a/css/app.css
+++ b/css/app.css
@@ -65,3 +65,16 @@
   background: blue;
 }
 
+.jumbo-container {
+  width: 100%;
+  height: 500px;
+  background: blue;
+}
+
+.jumbo-container .jumbo {
+  width: 70%;
+  height: 100%;
+  margin: 0 auto;
+  background: red;
+}
+
