--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,52 +1,17 @@
 @import "common";
 
-.navbar-container{
+
+// my partials
+@import "partials/_header.scss";
+
+.jumbo-container{
   width: 100%;
-  height: 70px;
-  .navbar{
+  height: 500px;
+  background: blue;
+  .jumbo{
     width: 70%;
     height: 100%;
     margin: 0 auto;
-    border-bottom: 1px solid lightgrey;
-    .navbar-left{
-      width: 50%;
-      height: 100%;
-      float: left;
-      img{
-        height: 60px;
-        margin-top: 5px;
-      }
-    }
-    .navbar-right{
-      width: 50%;
-      height: 100%;
-      float: left;
-      line-height: 70px;
-      text-align: right;
-      ul{
-        list-style: none;
-        li{
-          display: inline-block;
-          margin: 0 10px;
-
-          a{
-            text-decoration: none;
-            color: black;
-            &:hover{
-              color: blue;
-            }
-            &.sign-up{
-              border: 1px solid blue;
-              border-radius: 10px;
-              padding: 7px;
-              &:hover{
-                color: white;
-                background: blue;
-              }
-            }
-          }
-        }
-      }
-    }
+    background: red;
   }
 }
